--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
   - pip install -r requirements-dev.txt
 
 script:
-  - find src/ -name "*.py" | xargs pylint
+  - black . --check
   - pytest
