--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
-yapf = "*"
 pytest = "*"
+black = "*"
 
 [packages]
 responder = "~=1.3.0"
@@ -15,3 +14,6 @@ pika = "~=1.0.0"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
