--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,21 +1,17 @@
 -i https://pypi.org/simple
-astroid==2.2.5
+appdirs==1.4.3
 atomicwrites==1.3.0
 attrs==19.1.0
+black==19.3b0
+click==7.0
 importlib-metadata==0.18
-isort==4.3.20
-lazy-object-proxy==1.4.1
-mccabe==0.6.1
-more-itertools==7.0.0 ; python_version > '2.7'
+more-itertools==7.1.0
 packaging==19.0
 pluggy==0.12.0
 py==1.8.0
-pylint==2.3.1
 pyparsing==2.4.0
-pytest==4.6.3
+pytest==5.0.1
 six==1.12.0
-typed-ast==1.4.0 ; implementation_name == 'cpython'
+toml==0.10.0
 wcwidth==0.1.7
-wrapt==1.11.2
-yapf==0.27.0
-zipp==0.5.1
+zipp==0.5.2
