--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.org/simple
 aiofiles==0.4.0
 aniso8601==6.0.0
-apispec==2.0.0
+apispec==2.0.2
 apistar==0.7.2
 certifi==2019.6.16
 chardet==3.0.4
@@ -17,7 +17,7 @@ idna==2.8
 itsdangerous==1.1.0
 jinja2==2.10.1
 markupsafe==1.1.1
-marshmallow==2.19.5
+marshmallow==3.0.0rc8
 parse==1.12.0
 pika==1.0.1
 promise==2.2.1
@@ -28,12 +28,12 @@ requests-toolbelt==0.9.1
 requests==2.22.0
 responder==1.3.1
 rfc3986==1.3.2
-rx==1.6.1
+rx==3.0.0b5
 six==1.12.0
 starlette==0.10.7
-typesystem==0.2.2
+typesystem==0.2.4
 urllib3==1.25.3
-uvicorn==0.8.1
+uvicorn==0.8.3
 uvloop==0.12.2 ; sys_platform != 'win32' and sys_platform != 'cygwin' and sys_platform != 'cli'
 websockets==7.0
 whitenoise==4.1.2
