--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ marshmallow_dataclass = "^7.5.1"
 black = "^19.10b0"
 pytest = "^5.4.1"
 isort = "^4.3.21"
+jedi = "^0.17.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
