--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = "^19.10b0"
 pytest = "^5.4.1"
 isort = "^4.3.21"
 jedi = "^0.17.0"
+requests = "^2.24.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
