--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^5.4.1"
 isort = "^4.3.21"
 jedi = "^0.17.0"
 requests = "^2.24.0"
+pytest-mock = "^3.3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
