--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ isort = "^4.3.21"
 jedi = "^0.17.0"
 requests = "^2.24.0"
 pytest-mock = "^3.3.1"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
